상품화면 페이지 구성, 회원가입API, 로그인API 코드 작성

--- a/MarketCurlyB/Podfile
+++ b/MarketCurlyB/Podfile
@@ -7,6 +7,7 @@ target 'MarketCurlyB' do
 
   pod 'Tabman', '~> 2.11'
   pod 'ExpyTableView'
+  pod 'Alamofire', "~> 5.5"
   # Pods for MarketCurlyB
 
 end
